2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update the gnome-vfs requirements to get
	gnome_vfs_uri_resolve_symbolic_link in the library
	(Closes: #467071)

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_save_state):
	* browser-plugin/totemPlugin.cpp: Call SaveState just before
	killing the plugin, so that it can save some details (such as the
	volume), does nothing yet though (Helps: #452063)

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	* browser-plugin/totemPlugin.cpp: Implement GetPluginStatus so that
	the .Mac galleries work, make sure all parts of the plugin advertise
	the same version of QuickTime (Closes: #464519)

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_callback_connect): Patch from Jan Arne Petersen
	<jpetersen@jpetersen.org> to fix the fullscreen seekbar not working
	(Closes: #462286)

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-lines.c:
	(totem_pl_parser_append_path), (totem_pl_parser_add_m3u):
	Escape the relative paths found in m3u files, as they're filenames
	not URIs (Closes: #461951)

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_uri_get_subtitle_uri): Remove
	the "%.*s" construct, it's completely broken with wide-characters
	and non-UTF8 ones

2007-08-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): Some systems seem to like it when GTypes
	are initialised early on (Closes: #441803)

2007-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_url_valist):
	Avoid possible crashes in applications by trying to convert non-UTF8
	text to UTF-8 before passing it on to the application

2007-08-13  Bastien Nocera  <hadess@hadess.net>
