@@ -43,7 +43,6 @@
        <arg type="s" name="URI" direction="in" />
        <arg type="u" name="Time" direction="in" />
     </method>
-    <method name="SaveState"/>
 
     <signal name="ButtonPress">
       <arg type="u" name="Time" />
